language/move-lang/tests/move_check/typing/uninferred_type_call.exp
error: 

   ┌── tests/move_check/typing/uninferred_type_call.move:3:9 ───
   │
 3 │         foo()
   │         ^^^^^ Could not infer this type. Try adding an annotation
   │

