language/move-lang/tests/move_check/typing/uninferred_type_call.move
module M {
    fun t() {
        foo()
    }

    fun foo<T>() {}
}
